[Android] Show keyword instead of parsed url for each custom engine

Currently Android displays "xxx.com" parsed from url of a TemplateURL. This
is not appropriate because url could ends with different types of
domains such as ".org", ".co" and etc. And also this is inconsitent with
information shown on desktop.

To solve this, the field will be displayed with the keyword of a
TemplateURL.

BUG=675738

Review-Url: https://codereview.chromium.org/2589013002
Cr-Commit-Position: refs/heads/master@{#440314}

Former-commit-id: a0fdaeac4fcfad4d00ba10e10826ee375164e8db